# rust-weather-cli

./: .env.sample  Cargo.toml  LICENSE  readme.md
src/: env.rs  error.rs  main.rs
src/model/: current.json  current.rs  forecast.json  forecast.rs  future.json  future.rs  history.json  history.rs  mod.rs
