[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }

# Env
dotenvy = { version = "0.15.7" }

# CLI
clap = { version = "4.5.4", features = ["derive"] }

# Table
tabled = { version = "0.15.0" }
json_to_table = { version = "0.7.0" }

# Time
chrono = { version = "0.4.37", features = ["serde"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }

# Http request client
reqwest = { version = "0.12.3", features = ["json", "rustls-tls-native-roots"] }

# Error handling
thiserror = { version = "1.0.58" }
